--- a/mhw1.css
+++ b/mhw1.css
@@ -2,14 +2,13 @@
     background-color: black;
     font-size: 16px;
     margin: 0;
-    font-family: 'Cooper',sans-serif;
+    font-family: "Cooper", sans-serif;
 }
 
 @media (max-width: 500px) {
     body {
         font-size: 1em;
     }
-
 }
 
 nav {
@@ -26,10 +25,10 @@ nav {
 }
 
 #nome {
-    font-family: Lucida Handwriting;
+    font-family: "Alkatra", sans-serif;
     font-size: 1.75em;
     color: black;
-    margin: 10px;
+    margin: 5px;
 }
 
 @media(max-width: 500px) {
@@ -45,8 +44,9 @@ nav {
     #menu div {
         width: 25px;
         height: 3px;
-        background-color: white;
-        margin: 5px 15px;
+        background-color: black;
+        margin: 5px 1em;
+        
     }
 
 @media (max-width: 500px) {
@@ -69,7 +69,7 @@ a {
 
 #links{
     margin-top: 1em;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Lato", sans-serif;
     font-style: normal;
     text-transform: uppercase;
     color: black;
@@ -113,13 +113,15 @@ header h1 {
 }
 
     header h1 a {
+        font-family: "Pridi", sans-serif;
         font-size: 1em;
         color: black;
     }
 
     header h1 strong {
+        font-family: "Calistoga", sans-serif;
         font-size: 2.5em;
-        letter-spacing: 3px;
+        letter-spacing: 2px;
     }
 
 @media (max-width: 500px) {
@@ -169,11 +171,6 @@ section {
     }
 }
 
-#vetrina div {
-    flex-grow: 1;
-    padding: 20px;
-}
-
 #vetrina img {
     width: 50%;
 }
@@ -192,10 +189,8 @@ footer {
 }
 
     footer p {
-        font-family: 'Open Sans', sans-serif;
+        font-family: "Open Sans", sans-serif;
         font-style: normal;
         text-transform: uppercase;
         color: black;
     }
-
-    
